--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -163,7 +163,7 @@ The {productname} 6.7.0 release includes an accompanying release of the **Spell 
 
 **Spell Checker Pro** 3.3.1 includes the following bug-fixes:
 
-==== Switching to readonly mode would not hide spelling mistakes.
+==== Switching to readonly mode would not hide spelling mistakes
 // TINY-9463
 In previous versions of **Spell Checker Pro**, when switching to read-only mode within a {productname} document, the plugin failed to hide spelling mistakes as expected.
 
