--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -172,7 +172,7 @@ When in **read-only** mode, the plugin still marked words with the red underline
 **Spell Checker Pro** 3.3.1 addresses this. When switching between edit and read-only modes, spelling error visibility now correctly aligns with the current editor state.
 
 
-==== Switching the editable root state to false would not hide spelling mistakes in non-editable content.
+==== Switching the editable root state to false would not hide spelling mistakes in non-editable content
 // TINY-9463
 In previous versions of **Spell Checker Pro**, an issue was identified that affected the plugin’s behavior when the insertion point or content selection was within a block element with the `contenteditable="false"` attribute set.
 
