--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -549,6 +549,15 @@ Previously, when a xref:checklist.adoc[Checklist], particularly a checklist that
 
 === Returning an empty string in a custom context menu update function resulted in a small white line appearing on right-click and the browser-native context menu would not present
 // TINY-9842
+Adding `browser_spellcheck: true` to a configuration tells {productname} to use the host browser’s native context menu for spell-checking.
+
+When this was set at the same time as multiple custom plugins were added to the `contextmenu` configuration, the browser-native context menu did not present as expected when invoked.
+
+Instead a short white line appeared.
+
+{productname} 6.7 addresses this by improving the handling of multiple empty strings in its context menu logic.
+
+Consequent to this improved handling, the browser-native context menu now presents as expected when invoked.
 
 === For sufficiently long URLs and sufficiently wide windows, URL autocompletion hid middle portions of the URL from view
 // TINY-10017
