DOC-2171: 6.7-release-notes.adoc
Missing *For information* line in the Comments section is no longer missing.

--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -172,6 +172,8 @@ Previously, when a comment was added to an existing comment thread in a {product
 
 **Comments** 3.3.3 corrects this. When comments are added to extant threads, the change event is now fired as expected, and the *Editor changed* message is sent to the console, also as expected.
 
+For information on the **Comments** plugin, see: xref:introduction-to-tiny-comments.adoc[Introduction to Tiny Comments].
+
 
 === Enhanced Media Embed 3.1.3
 
