--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -161,9 +161,9 @@ For information on the **Checklist** plugin, see: xref:checklist.adoc[Checklist]
 
 === Comments 3.3.3
 
-The {productname} 6.7.0 release includes an accompanying release of the **Commments** premium plugin.
+The {productname} 6.7.0 release includes an accompanying release of the **Comments** premium plugin.
 
-**Commments** 3.3.3 includes the following bug fix:
+**Comments** 3.3.3 includes the following bug fix:
 
 ==== Change event did not fire upon adding a reply
 // TINY-10089
